<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mybatis-flex</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <version>1.2.3</version>

    <name>mybatis-flex</name>
    <url>https://mybatis-flex.com</url>
    <description>Mybatis-Flex is an elegant Mybatis Enhancement Framework.</description>

    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/mybatis-flex/mybatis-flex/issues</url>
    </issueManagement>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>yangfuhai</name>
            <email>fuhai999@gmail.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/mybatis-flex/mybatis-flex.git</connection>
        <developerConnection>scm:git:https://github.com/mybatis-flex/mybatis-flex.git</developerConnection>
        <url>https://github.com/mybatis-flex/mybatis-flex</url>
    </scm>

    <modules>
        <module>mybatis-flex-annotation</module>
        <module>mybatis-flex-codegen</module>
        <module>mybatis-flex-core</module>
        <module>mybatis-flex-spring</module>
        <module>mybatis-flex-spring-boot-starter</module>
        <module>mybatis-flex-solon-plugin</module>
        <module>mybatis-flex-test</module>
        <module>mybatis-flex-processor</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <mybatis.version>3.5.11</mybatis.version>
        <mybatis-spring.version>2.0.7</mybatis-spring.version>
        <mybatis-freemarker.version>1.2.4</mybatis-freemarker.version>
        <mybatis-velocity.version>2.1.2</mybatis-velocity.version>
        <mybatis-thymeleaf.version>1.0.4</mybatis-thymeleaf.version>

        <mysql.version>5.1.49</mysql.version>
        <HikariCP.version>4.0.3</HikariCP.version>

        <spring.version>5.3.25</spring.version>
        <spring-boot.version>2.7.10</spring-boot.version>
        <solon.version>2.2.10</solon.version>

        <junit.version>4.13.2</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-freemarker</artifactId>
                <version>${mybatis-freemarker.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-velocity</artifactId>
                <version>${mybatis-velocity.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-thymeleaf</artifactId>
                <version>${mybatis-thymeleaf.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jdbc</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <!--for test-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${HikariCP.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <excludes>
                    <exclude>
                        *.properties
                    </exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

        </plugins>
    </build>


    <profiles>
        <profile>
            <!-- 跳过测试：mvn package -Dmaven.test.skip=true   -->
            <!-- 检测依赖最新版本：mvn versions:display-dependency-updates  -->
            <!-- 统一修改版本号：mvn versions:set -DnewVersion=3.0  -->
            <!-- mvn -N versions:update-child-modules  -->
            <!-- mvn versions:set -DnewVersion=2.0 -DprocessAllModules=true -DallowSnapshots=true -->

            <!-- mvn clean source:jar install -->
            <!-- mvn deploy -Dmaven.test.skip=true -e -P release -->
            <!-- mvn deploy -e -P release -->
            <id>release</id>
            <build>
                <plugins>
                    <!-- Source -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Javadoc -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.10.4</version>
                        <configuration>
                            <windowtitle>Mybatis-Flex</windowtitle>
                            <doctitle>Mybatis-Flex</doctitle>
                            <show>private</show>
                            <detectLinks>false</detectLinks>
                            <detectOfflineLinks>true</detectOfflineLinks>
                            <linksource>true</linksource>
                            <additionalparam>-Xdoclint:none</additionalparam>
                            <detectJavaApiLink>true</detectJavaApiLink>
                            <source>17</source>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- 以下是GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>


</project>